--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				<img src="images/logo.png">
+				<a href="#intro"><img src="images/logo.png" alt="PaHtawi"></a>
 				<nav>
 					<ul>
-						<li><a href="#intro" class="effect5" data-hover="Home">Home</a></li>
-						<li><a href="#one" class="effect5" data-hover="About PaHtawi">About PaHtaWi</a></li>
+						<li class="adj"><a href="#intro" class="effect5" data-hover="Home">Home</a></li>
+						<li><a href="#one" class="effect5" data-hover="About">About</a></li>
 						<li><a href="#two" class="effect5" data-hover="Services">Services</a></li>
 						<li><a href="#work" class="effect5" data-hover="Accessories">Accessories</a></li>
 						<li><a href="#flowerpots" class="effect5" data-hover="Flowerpots">Flowerpots</a></li>
@@ -306,7 +306,7 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
-			<script>hljs.initHighlightingOnLoad();</script>
+			<!-- <script>hljs.initHighlightingOnLoad();</script> -->
 
 			<script>
             $("#js-rotating").Morphext({
