--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/morphext.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+		<!-- <link rel="stylesheet" type="text/css" href="assets/css/animations.css"> -->
+
+		<script src="assets/js/jquery.min.js"></script>
+		<!-- <script src="assets/js/css3-animate-it.js"></script> -->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -42,8 +46,8 @@
 						<h2 class="byline" id="byline">PaHtaWi</h2>
 					</header>
 					<p id="js-rotating2">Earthenware Enterprise</p>
-					<footer>
-						<a href="#one" class="button style2 down">More</a>
+					<footer class="animated slideInUp">
+						<a href="#one" class="button style2 down bounce infinite animated">More</a>
 					</footer>
 				</div>
 			</section>
@@ -296,7 +300,6 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/morphext.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -305,6 +308,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			
 
 			<!-- <script>hljs.initHighlightingOnLoad();</script> -->
 
@@ -350,44 +354,6 @@
 			  	byline.appendChild(span); 					// Add the span to the h2
 			  }
 			}
-            
-            //svg image chage color
-            /*
-			 * Replace all SVG images with inline SVG
-			 */
-			jQuery('img.svg').each(function(){
-			    var $img = jQuery(this);
-			    var imgID = $img.attr('id');
-			    var imgClass = $img.attr('class');
-			    var imgURL = $img.attr('src');
-
-			    jQuery.get(imgURL, function(data) {
-			        // Get the SVG tag, ignore the rest
-			        var $svg = jQuery(data).find('svg');
-
-			        // Add replaced image's ID to the new SVG
-			        if(typeof imgID !== 'undefined') {
-			            $svg = $svg.attr('id', imgID);
-			        }
-			        // Add replaced image's classes to the new SVG
-			        if(typeof imgClass !== 'undefined') {
-			            $svg = $svg.attr('class', imgClass+' replaced-svg');
-			        }
-
-			        // Remove any invalid XML tags as per http://validator.w3.org
-			        $svg = $svg.removeAttr('xmlns:a');
-
-			        // Check if the viewport is set, if the viewport is not set the SVG wont't scale.
-			        if(!$svg.attr('viewBox') && $svg.attr('height') && $svg.attr('width')) {
-			            $svg.attr('viewBox', '0 0 ' + $svg.attr('height') + ' ' + $svg.attr('width'))
-			        }
-
-			        // Replace image with new SVG
-			        $img.replaceWith($svg);
-
-			    }, 'xml');
-
-			});
         </script>
 	</body>
 </html>
