--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
+			<section id="one" class="main style2 right dark fullscreen animated slideInUp">
 				<div class="content box style2">
 					<header>
 						<h2>About PaHtaWa</h2>
@@ -62,11 +62,11 @@
 						Ideally, I started my business base on my hobby, planting flowers with beautiful pots. In the past, whenever I shopped for pots, most pots I found did not match the flowers I wanted to pair with them. I started to notice there is not enough beautifully designed pots on the market. I really wanted to match the right pots with the right flowers.
 					</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<a href="#two" class="button style2 down anchored bounce infinite animated">Next</a>
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
+			<section id="two" class="main style2 left dark fullscreen animated slideInUp">
 				<div class="content box style2">
 					<header>
 						<h2>Services</h2>
@@ -80,7 +80,7 @@
 						You can order your desire or preferred pots design, colors and size. you can order to press your company logo on pots for using in office, school, hotels and motels. 
 					</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#work" class="button style2 down anchored bounce infinite animated">Next</a>
 			</section>
 
 		<!-- accessories -->
